# python-project-49

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/utils/: rnd.py
