[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "This is a set of math console games"
authors = ["usernaimandrey <anshlyapnikov@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
