[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = "This is a set of math console games"
authors = ["usernaimandrey <anshlyapnikov@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
